--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
+    flex: -1;
 }
 
 .deck .card {
@@ -56,7 +57,7 @@ h1 {
     width: 125px;
     background: #2e3d49;
     font-size: 0;
-    color: #ffffff;
+    color: #fff;
     border-radius: 8px;
     cursor: pointer;
     display: flex;
@@ -79,6 +80,31 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+}
+
+
+.deck .card.wrongPair {
+    animation: shake 0.42s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+@keyframes shake {
+    10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+    transform: translate3d(2px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+    }
+
+    40%, 60% {
+    transform: translate3d(4px, 0, 0);
 }
 
 /*
@@ -106,4 +132,47 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+.score-panel .moves {
+    padding-left: 50px;
+}
+
+.score-panel .runner {
+    padding-left: 50px;
+}
+
+/*
+ * Styles for the Score Pop-up
+ */
+
+ .score-popup {
+    display: flex;
+    position: absolute;
+    text-align: center;
+    flex-direction: column;
+    width: 300px;
+    height: 200px;
+    padding: 15px;
+    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    z-index: 1;
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    border-radius: 10px;
+    color: #fff;
+    letter-spacing: 2px;
+ }
+
+.score-popup p {
+    margin: 10px;
+}
+
+.close {
+    color: #fff;
+    float: right;
+}
+
+.totalMoves, .totalTime {
+    font-size: 125%;
+    color: #2e3d49;
+    font-weight: 900;
 }
