--- a/css/app.css
+++ b/css/app.css
@@ -80,31 +80,138 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+    -webkit-backface-visibility: visible;
+            backface-visibility: visible;
+    -webkit-animation-name: flip;
+            animation-name: flip;
+    -webkit-animation-duration: 0.7s;
+            animation-duration: 0.7s;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+}
+
+@-webkit-keyframes flip {
+    0% {
+        -webkit-transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
+                transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+
+    40% {
+        -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+                transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+
+    50% {
+        -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+                transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+
+    80% {
+        -webkit-transform: perspective(400px) scale3d(.95, .95, .95);
+                transform: perspective(400px) scale3d(.95, .95, .95);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+
+    100% {
+        -webkit-transform: perspective(400px);
+                transform: perspective(400px);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+}
+
+@keyframes flip {
+    0% {
+        -webkit-transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
+                transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+
+    40% {
+        -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+                transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
+        -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+    }
+
+    50% {
+        -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+                transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+
+    80% {
+        -webkit-transform: perspective(400px) scale3d(.95, .95, .95);
+                transform: perspective(400px) scale3d(.95, .95, .95);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
+
+    100% {
+        -webkit-transform: perspective(400px);
+                transform: perspective(400px);
+        -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+    }
 }
 
 
 .deck .card.wrongPair {
-    animation: shake 0.42s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
+    -webkit-animation: shake 0.42s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+            animation: shake 0.42s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-perspective: 1000px;
+            perspective: 1000px;
+}
+
+@-webkit-keyframes shake {
+    10%, 90% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+    }
+    20%, 80% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
+    }
+    30%, 50%, 70% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+    }
+    40%, 60% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+    }
 }
 
 @keyframes shake {
     10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
     }
-
     20%, 80% {
-    transform: translate3d(2px, 0, 0);
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
     }
-
     30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
     }
-
     40%, 60% {
-    transform: translate3d(4px, 0, 0);
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+    }
 }
 
 /*
@@ -146,16 +253,30 @@ h1 {
  * Styles for the Score Pop-up
  */
 
+ .score-window {
+    display: flex;
+    width: 100%;
+    height: 120%;
+    background-color: #fff;
+    opacity: 0.5;
+    z-index: 1;
+    position: absolute;
+    text-align: center;
+    flex-direction: column;
+    padding: 32px;
+    border-radius: 10px;
+}
+
  .score-popup {
     display: flex;
     position: absolute;
     text-align: center;
     flex-direction: column;
     width: 300px;
-    height: 200px;
+    height: 280px;
     padding: 15px;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-    z-index: 1;
+    z-index: 2;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     border-radius: 10px;
     color: #fff;
@@ -171,8 +292,31 @@ h1 {
     float: right;
 }
 
-.totalMoves, .totalTime {
+.totalMoves,
+.totalTime,
+.totalStars {
     font-size: 125%;
     color: #2e3d49;
     font-weight: 900;
 }
+
+.button {
+    padding: 5px 15px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #2e3d49;
+    background-color: #fff;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 1px 1px 6px 0px #2e3d49;
+    font-size: 75%;
+    margin-top: 5px;
+}
+
+.button:hover {
+    background-color: #02ccba;
+    color: #fff;
+}
+
+
